# apiserver-example

./: BUILD.bazel  README.md  boilerplate.go.txt
cmd/apiserver/: main.go
cmd/controller-manager/: main.go
docs/examples/myresource/: myresource.yaml
pkg/: doc.go
pkg/apis/: doc.go  zz_generated.api.register.go
pkg/apis/core/: doc.go  zz_generated.api.register.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/apis/core/install/: doc.go  zz_generated.api.register.go
pkg/apis/core/v1alpha1/: doc.go  myresource_types.go  myresource_types_test.go  v1alpha1_suite_test.go  zz_generated.api.register.go  zz_generated.conversion.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/client/clientset_generated/clientset/: clientset.go  doc.go
pkg/client/clientset_generated/clientset/fake/: clientset_generated.go  register.go
pkg/client/clientset_generated/clientset/scheme/: doc.go  register.go
pkg/client/clientset_generated/internalclientset/: clientset.go  doc.go
pkg/client/clientset_generated/internalclientset/fake/: clientset_generated.go  doc.go  register.go
pkg/client/informers_generated/externalversions/: factory.go  generic.go
pkg/client/informers_generated/internalversion/: factory.go  generic.go
pkg/controller/: doc.go  zz_generated.api.register.go
pkg/controller/myresource/: controller.go  controller_test.go  myresource_suite_test.go  zz_generated.api.register.go
pkg/controller/sharedinformers/: doc.go  informers.go  zz_generated.api.register.go
pkg/openapi/: doc.go  openapi_generated.go
sample/: myresource.yaml
(+26 files in other folders)
